query-compiler/query-compiler/tests/snapshots/queries__queries@delete-many.json.snap
---
source: query-compiler/query-compiler/tests/queries.rs
expression: pretty
input_file: query-compiler/query-compiler/tests/data/delete-many.json
---
sum (execute «DELETE FROM "public"."Post" WHERE ("public"."Post"."id") IN
              (SELECT "public"."Post"."id" FROM "public"."Post" WHERE
              "public"."Post"."title" = $1 LIMIT $2)»
     params [const(String("whatever")), const(BigInt(2))])
