query-compiler/query-compiler/tests/snapshots/queries__queries@delete-one.json.snap
---
source: query-compiler/query-compiler/tests/queries.rs
expression: pretty
input_file: query-compiler/query-compiler/tests/data/delete-one.json
---
dataMap {
    id: Int (id)
    title: String (title)
    userId: Int (userId)
}
let 0 = unique (query «DELETE FROM "public"."Post" WHERE "public"."Post"."id" =
                       $1 RETURNING "public"."Post"."id",
                       "public"."Post"."title", "public"."Post"."userId"»
                params [const(BigInt(1))])
in let 0 = validate (get 0)
       [ rowCountNeq 0
       ] orRaise "MISSING_RECORD"
   in ();
   get 0
