query-compiler/query-compiler/tests/snapshots/queries__queries@execute-raw.json.snap
---
source: query-compiler/query-compiler/tests/queries.rs
expression: pretty
input_file: query-compiler/query-compiler/tests/data/execute-raw.json
---
execute «INSERT INTO User (email) VALUES ($1)»
params [const(String("user.1737556027349@prisma.io"))]
