query-compiler/query-compiler/tests/snapshots/queries__queries@filter-contains-param-insensitive.json.snap
---
source: query-compiler/query-compiler/tests/queries.rs
expression: pretty
input_file: query-compiler/query-compiler/tests/data/filter-contains-param-insensitive.json
---
dataMap {
    id: Int (id)
    email: String (email)
    role: Enum<Role> (role)
}
enums {
    Role: {
        admin: ADMIN
        user: USER
    }
}
query «SELECT "t0"."id", "t0"."email", "t0"."role"::text FROM "public"."User" AS
       "t0" WHERE "t0"."email" ILIKE ('%' || $1 || '%')»
params [var(searchTerm as String)]
