query-compiler/query-compiler/tests/snapshots/queries__queries@filter-not-contains-param.json.snap
---
source: query-compiler/query-compiler/tests/queries.rs
expression: pretty
input_file: query-compiler/query-compiler/tests/data/filter-not-contains-param.json
---
dataMap {
    id: Int (id)
    email: String (email)
    role: Enum<Role> (role)
}
enums {
    Role: {
        admin: ADMIN
        user: USER
    }
}
query «SELECT "t0"."id", "t0"."email", "t0"."role"::text FROM "public"."User" AS
       "t0" WHERE (NOT "t0"."email"::text LIKE ('%' || $1 || '%'))»
params [var(excludeTerm as String)]
