query-compiler/query-compiler/tests/snapshots/queries__queries@geometry-combined-scalar-spatial.json.snap
---
source: query-compiler/query-compiler/tests/queries.rs
expression: pretty
input_file: query-compiler/query-compiler/tests/data/geometry-combined-scalar-spatial.json
snapshot_kind: text
---
dataMap {
    id: Int (id)
    name: String? (name)
    position: Geometry(point)? (position)
}
query «SELECT "t0"."id", "t0"."name", "t0"."position" FROM "public"."Location"
       AS "t0" WHERE (ST_DWithin("t0"."position", ST_SetSRID(ST_MakePoint($1,
       $2), $3), $4) AND "t0"."name"::text LIKE $5)»
params [const(Float(BigDecimal("0"))), const(Float(BigDecimal("0"))),
        const(BigInt(4326)), const(Float(BigDecimal("10000"))),
        const(String("Paris%"))]
