query-compiler/query-compiler/tests/snapshots/queries__queries@geometry-count-with-filter.json.snap
---
source: query-compiler/query-compiler/tests/queries.rs
expression: pretty
input_file: query-compiler/query-compiler/tests/data/geometry-count-with-filter.json
snapshot_kind: text
---
dataMap {
    id: Int (id)
    name: String? (name)
    position: Geometry(point)? (position)
}
query «SELECT "t0"."id", "t0"."name", "t0"."position" FROM "public"."Location"
       AS "t0" WHERE ST_Within("t0"."position", ST_GeomFromText($1, $2)) ORDER
       BY "t0"."id" ASC LIMIT $3»
params [const(String("POLYGON((-1 -1, -1 5, 5 5, 5 -1, -1 -1))")),
        const(BigInt(4326)), const(BigInt(10))]
